[metadata]
name = RGFlood
version = 0.0.1
author = Andrew Ernest
author_email = anernest@ratesresearch.org
description = RGVFlood Cybercollaboratory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RATESResearch/RGVFlood
project_urls =
    Bug Tracker = https://github.com/RATESResearch/RGVFlood/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    invoke
    sphinx
    sphinx-rtd-theme
    myst-parser
[options.packages.find]
where = src
